--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,3 +1,7 @@
+/* Write your global styles here, in PostCSS syntax */
+
+@tailwind base;
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -40,3 +44,7 @@
 .read-the-docs {
   color: #888;
 }
+
+@tailwind components;
+
+@tailwind utilities;
